--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 <app-resume></app-resume>
 <app-portfolio></app-portfolio>
 <app-project-counter></app-project-counter>
+<app-contact></app-contact>
 <app-footer></app-footer>
 <app-top-page></app-top-page>
